--- a/src/app/features/lazy/lazy.component.html
+++ b/src/app/features/lazy/lazy.component.html
@@ -3,8 +3,8 @@
     This module is being loaded lazily.
 
 		<div>Current Count: {{ counter | async }}</div>
-    <button (click)="increment()">Increment</button>
-		<button (click)="decrement()">Decrement</button>
-		<button (click)="reset()">Reset Counter</button>
+    <button md-raised-button (click)="increment()">Increment</button>
+		<button md-raised-button (click)="decrement()">Decrement</button>
+		<button md-raised-button (click)="reset()">Reset Counter</button>
   </h5>
 </header>
